# CNN_convolution_2D

./: CMakeLists.txt  README.md  main.cpp  start.sh
image/: channel1  channel2  channel3
include/: matrix.h
kernel/: channel2  channel3
src/: convolution.cpp  matrix.cpp
